# phaseMangler

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BandDescriptor.h  PhaseScrambler.cpp  PhaseScrambler.h
Source/Tests/: PhaseScramblerTests.cpp
Source/UI/: BandColumn.cpp  BandColumn.h  FrequencyDisplay.cpp  FrequencyDisplay.h  LookAndFeel.cpp  LookAndFeel.h
Source/UI/PresetPanel/: PresetPanel.cpp  PresetPanel.h
docs/superpowers/plans/: 2026-06-17-phase-mangler.md
docs/superpowers/specs/: 2026-06-17-phase-mangler-design.md
